[gd_scene load_steps=4 format=3 uid="uid://bxj4v7k5n3c2w"]

[ext_resource type="Script" uid="uid://dvwskyonlgstb" path="res://scenes/name_entry.gd" id="1_m2p3s"]

[sub_resource type="Gradient" id="Gradient_fantasy_bg"]
offsets = PackedFloat32Array(0, 0, 0, 1)
colors = PackedColorArray(0.08, 0.04, 0.02, 1, 0.12, 0.08, 0.04, 1, 0.06, 0.03, 0.01, 1, 0.1, 0.05, 0.02, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fantasy"]
gradient = SubResource("Gradient_fantasy_bg")
fill_to = Vector2(1, 1)

[node name="NameEntry" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_m2p3s")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
texture = SubResource("GradientTexture2D_fantasy")
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 52
text = "‚öîÔ∏è Welcome to SiegecraftTD! ‚öîÔ∏è"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 26
text = "üè∞ Enter your name to forge your legend üè∞"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NameInputContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="VBoxContainer/NameInputContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.65, 0.35, 1)
theme_override_font_sizes/font_size = 22
text = "‚öíÔ∏è Your Champion's Name:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer/NameInputContainer"]
custom_minimum_size = Vector2(450, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your heroic name..."
max_length = 30
select_all_on_focus = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="CreateButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚öîÔ∏è Begin Adventure"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = " "
horizontal_alignment = 1

[connection signal="text_submitted" from="VBoxContainer/NameInputContainer/NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/CreateButton" to="." method="_on_create_button_pressed"]
